atualização do design da interface

--- a/src/projetoldp/FXMLDocument.fxml
+++ b/src/projetoldp/FXMLDocument.fxml
@@ -10,12 +10,27 @@
 
 <AnchorPane id="AnchorPane" prefHeight="743.0" prefWidth="1250.0" style="-fx-background-color: #d8d6c9;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projetoldp.FXMLDocumentController">
     <children>
-        <Button fx:id="button" layoutX="1105.0" layoutY="311.0" onAction="#handleButtonAction" text="DADOS" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#4d1b0c" height="49.0" layoutX="1176.0" layoutY="339.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="50.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#4d1b0c" height="49.0" layoutX="1108.0" layoutY="339.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="50.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#4d1b0c" height="49.0" layoutX="1035.0" layoutY="339.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="50.0" />
+        <Button fx:id="button" layoutX="1035.0" layoutY="301.0" onAction="#handleButtonAction" prefHeight="25.0" prefWidth="190.0" text="LANÇAR DADOS" />
         <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
-      <Text fx:id="text1" layoutX="1076.0" layoutY="368.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" wrappingWidth="34.13671875" />
-      <Text fx:id="text2" layoutX="1126.0" layoutY="369.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" wrappingWidth="34.13671875" />
-      <Text fx:id="text3" layoutX="1181.0" layoutY="369.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" wrappingWidth="34.13671875" />
-      <Pane layoutX="34.0" layoutY="85.0" prefHeight="515.0" prefWidth="974.0" style="-fx-background-color: #ada89a;">
+      <Text fx:id="text1" fill="WHITE" layoutX="1054.0" layoutY="371.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" wrappingWidth="34.13671875">
+         <font>
+            <Font name="Segoe UI Black Italic" size="20.0" />
+         </font>
+      </Text>
+      <Text fx:id="text2" fill="WHITE" layoutX="1125.0" layoutY="372.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" wrappingWidth="34.13671875">
+         <font>
+            <Font name="Segoe UI Black Italic" size="20.0" />
+         </font>
+      </Text>
+      <Text fx:id="text3" fill="WHITE" layoutX="1194.0" layoutY="372.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" wrappingWidth="34.13671875">
+         <font>
+            <Font name="Segoe UI Black Italic" size="20.0" />
+         </font>
+      </Text>
+      <Pane fx:id="tabuleiroPane" layoutX="34.0" layoutY="85.0" prefHeight="515.0" prefWidth="974.0" style="-fx-background-color: #ada89a;">
          <children>
             <Rectangle fx:id="pos1" arcHeight="5.0" arcWidth="5.0" fill="#8e6239" height="200.0" layoutX="64.0" layoutY="301.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="44.0" />
             <Rectangle fx:id="pos5" arcHeight="5.0" arcWidth="5.0" fill="#8e6239" height="200.0" layoutX="344.0" layoutY="301.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="44.0" />
@@ -48,5 +63,51 @@
             </Text>
          </children>
       </Pane>
+      <Pane fx:id="pecasPane1" layoutX="34.0" layoutY="671.0" prefHeight="49.0" prefWidth="576.0" style="-fx-background-color: #34170d;">
+         <children>
+            <Rectangle fx:id="p1" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="70.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p2" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="100.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p4" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="160.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p3" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="130.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p7" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="250.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p8" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="280.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p6" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="220.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p5" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="190.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p13" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="430.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p14" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="460.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p15" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="490.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p11" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="370.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p12" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="400.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p10" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="340.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p9" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="310.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+         </children>
+      </Pane>
+      <Pane fx:id="pecasPane2" layoutX="639.0" layoutY="671.0" prefHeight="49.0" prefWidth="576.0" style="-fx-background-color: #34170d;">
+         <children>
+            <Rectangle fx:id="p24" arcHeight="5.0" arcWidth="5.0" fill="#8e4820" height="17.0" layoutX="316.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p25" arcHeight="5.0" arcWidth="5.0" fill="#8e4820" height="17.0" layoutX="346.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p27" arcHeight="5.0" arcWidth="5.0" fill="#8e4820" height="17.0" layoutX="406.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p26" arcHeight="5.0" arcWidth="5.0" fill="#8e4820" height="17.0" layoutX="376.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p30" arcHeight="5.0" arcWidth="5.0" fill="#8e4820" height="17.0" layoutX="496.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p29" arcHeight="5.0" arcWidth="5.0" fill="#8e4820" height="17.0" layoutX="466.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p28" arcHeight="5.0" arcWidth="5.0" fill="#8e4820" height="17.0" layoutX="436.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p20" arcHeight="5.0" arcWidth="5.0" fill="#8e4820" height="17.0" layoutX="196.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p21" arcHeight="5.0" arcWidth="5.0" fill="#8e4820" height="17.0" layoutX="226.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p23" arcHeight="5.0" arcWidth="5.0" fill="#8e4820" height="17.0" layoutX="286.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p22" arcHeight="5.0" arcWidth="5.0" fill="#8e4820" height="17.0" layoutX="256.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p18" arcHeight="5.0" arcWidth="5.0" fill="#8e4820" height="17.0" layoutX="136.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p19" arcHeight="5.0" arcWidth="5.0" fill="#8e4820" height="17.0" layoutX="166.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p17" arcHeight="5.0" arcWidth="5.0" fill="#8e4820" height="17.0" layoutX="106.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p16" arcHeight="5.0" arcWidth="5.0" fill="#8e4820" height="17.0" layoutX="76.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+         </children>
+      </Pane>
+      <Pane fx:id="pecasatacadasPane1" layoutX="34.0" layoutY="615.0" prefHeight="49.0" prefWidth="576.0" style="-fx-background-color: #34170d;" />
+      <Pane fx:id="pecasatacadasPane2" layoutX="639.0" layoutY="615.0" prefHeight="49.0" prefWidth="576.0" style="-fx-background-color: #34170d;" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#4d1b0c" height="200.0" layoutX="1030.0" layoutY="85.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="10.0" width="200.0" />
+      <Text fill="WHITE" layoutX="1061.0" layoutY="200.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DADOS" wrappingWidth="143.13671875">
+         <font>
+            <Font name="Segoe UI Black" size="38.0" />
+         </font>
+      </Text>
     </children>
 </AnchorPane>
