--- a/src/projetoldp/FXMLDocument.fxml
+++ b/src/projetoldp/FXMLDocument.fxml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="743.0" prefWidth="1250.0" style="-fx-background-color: #d8d6c9;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projetoldp.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="743.0" prefWidth="1250.0" style="-fx-background-color: #d8d6c9;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projetoldp.FXMLDocumentController">
     <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#4d1b0c" height="49.0" layoutX="1176.0" layoutY="339.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="50.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#4d1b0c" height="49.0" layoutX="1108.0" layoutY="339.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="50.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#4d1b0c" height="49.0" layoutX="1035.0" layoutY="339.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="50.0" />
-        <Button fx:id="button" layoutX="1035.0" layoutY="301.0" onAction="#handleButtonAction" prefHeight="25.0" prefWidth="190.0" text="LANÇAR DADOS" />
+        <Button fx:id="lancardados" layoutX="1035.0" layoutY="301.0" onAction="#handleButtonAction" prefHeight="25.0" prefWidth="190.0" text="LANÇAR DADOS" />
         <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
       <Text fx:id="text1" fill="WHITE" layoutX="1054.0" layoutY="371.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" wrappingWidth="34.13671875">
          <font>
@@ -104,7 +104,7 @@
       <Pane fx:id="pecasatacadasPane1" layoutX="34.0" layoutY="615.0" prefHeight="49.0" prefWidth="576.0" style="-fx-background-color: #34170d;" />
       <Pane fx:id="pecasatacadasPane2" layoutX="639.0" layoutY="615.0" prefHeight="49.0" prefWidth="576.0" style="-fx-background-color: #34170d;" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#4d1b0c" height="200.0" layoutX="1030.0" layoutY="85.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="10.0" width="200.0" />
-      <Text fill="WHITE" layoutX="1061.0" layoutY="200.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DADOS" wrappingWidth="143.13671875">
+      <Text fx:id="txtDados" fill="WHITE" layoutX="1061.0" layoutY="200.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DADOS" wrappingWidth="143.13671875">
          <font>
             <Font name="Segoe UI Black" size="38.0" />
          </font>
