--- a/src/projetoldp/FXMLDocument.fxml
+++ b/src/projetoldp/FXMLDocument.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -8,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AnchorPane" prefHeight="743.0" prefWidth="1250.0" style="-fx-background-color: #d8d6c9;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projetoldp.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="743.0" prefWidth="1250.0" style="-fx-background-color: #d8d6c9;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="projetoldp.FXMLDocumentController">
     <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#4d1b0c" height="49.0" layoutX="1176.0" layoutY="339.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="50.0" />
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#4d1b0c" height="49.0" layoutX="1108.0" layoutY="339.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="50.0" />
@@ -109,5 +114,11 @@
             <Font name="Segoe UI Black" size="38.0" />
          </font>
       </Text>
+      <Button fx:id="jogada" layoutX="1035.0" layoutY="455.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" text="Acabar a Jogada" />
+      <Label fx:id="labelVez" layoutX="417.0" layoutY="24.0" text="Espera pela tua vez!!">
+         <font>
+            <Font name="Segoe UI Black" size="32.0" />
+         </font>
+      </Label>
     </children>
 </AnchorPane>
