--- a/src/projetoldp/FXMLDocument.fxml
+++ b/src/projetoldp/FXMLDocument.fxml
@@ -35,7 +35,7 @@
             <Font name="Segoe UI Black Italic" size="20.0" />
          </font>
       </Text>
-      <Pane fx:id="tabuleiroPane" layoutX="34.0" layoutY="85.0" prefHeight="515.0" prefWidth="974.0" style="-fx-background-color: #ada89a;">
+      <Pane fx:id="tabuleiroPane" layoutX="34.0" layoutY="85.0" prefHeight="648.0" prefWidth="974.0" style="-fx-background-color: #ada89a;">
          <children>
             <Rectangle fx:id="pos1" arcHeight="5.0" arcWidth="5.0" fill="#8e6239" height="200.0" layoutX="64.0" layoutY="301.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="44.0" />
             <Rectangle fx:id="pos5" arcHeight="5.0" arcWidth="5.0" fill="#8e6239" height="200.0" layoutX="344.0" layoutY="301.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="44.0" />
@@ -61,30 +61,26 @@
             <Rectangle fx:id="pos21" arcHeight="5.0" arcWidth="5.0" fill="#8e6239" height="200.0" layoutX="274.0" layoutY="14.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="44.0" />
             <Rectangle fx:id="pos20" arcHeight="5.0" arcWidth="5.0" fill="#8e6239" height="200.0" layoutX="344.0" layoutY="14.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="44.0" />
             <Rectangle fx:id="pos24" arcHeight="5.0" arcWidth="5.0" fill="#8e6239" height="200.0" layoutX="64.0" layoutY="14.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="44.0" />
+            <Rectangle fx:id="p1" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="458.0" layoutY="604.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p2" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="428.0" layoutY="604.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p4" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="398.0" layoutY="604.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p3" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="366.0" layoutY="604.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p7" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="336.0" layoutY="604.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p8" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="310.0" layoutY="604.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p6" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="274.0" layoutY="604.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p5" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="248.0" layoutY="604.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p13" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="218.0" layoutY="604.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p14" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="196.0" layoutY="604.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p15" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="162.0" layoutY="604.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p11" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="134.0" layoutY="604.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p12" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="100.0" layoutY="604.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p10" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="64.0" layoutY="604.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
+            <Rectangle fx:id="p9" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="39.0" layoutY="604.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
             <Text fill="#4e2f20" layoutX="433.0" layoutY="275.0" strokeType="OUTSIDE" strokeWidth="0.0" text="TÁBULA" wrappingWidth="190.13671875">
                <font>
                   <Font name="Segoe UI Black" size="46.0" />
                </font>
             </Text>
-         </children>
-      </Pane>
-      <Pane fx:id="pecasPane1" layoutX="34.0" layoutY="671.0" prefHeight="49.0" prefWidth="576.0" style="-fx-background-color: #34170d;">
-         <children>
-            <Rectangle fx:id="p1" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="70.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
-            <Rectangle fx:id="p2" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="100.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
-            <Rectangle fx:id="p4" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="160.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
-            <Rectangle fx:id="p3" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="130.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
-            <Rectangle fx:id="p7" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="250.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
-            <Rectangle fx:id="p8" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="280.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
-            <Rectangle fx:id="p6" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="220.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
-            <Rectangle fx:id="p5" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="190.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
-            <Rectangle fx:id="p13" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="430.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
-            <Rectangle fx:id="p14" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="460.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
-            <Rectangle fx:id="p15" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="490.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
-            <Rectangle fx:id="p11" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="370.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
-            <Rectangle fx:id="p12" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="400.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
-            <Rectangle fx:id="p10" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="340.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
-            <Rectangle fx:id="p9" arcHeight="5.0" arcWidth="5.0" fill="#d7cbad" height="17.0" layoutX="310.0" layoutY="16.0" stroke="#d7cbad" strokeType="INSIDE" strokeWidth="0.0" width="16.0" />
          </children>
       </Pane>
       <Pane fx:id="pecasPane2" layoutX="639.0" layoutY="671.0" prefHeight="49.0" prefWidth="576.0" style="-fx-background-color: #34170d;">
@@ -114,11 +110,14 @@
             <Font name="Segoe UI Black" size="38.0" />
          </font>
       </Text>
-      <Button fx:id="jogada" layoutX="1035.0" layoutY="455.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" text="Acabar a Jogada" />
+      <Button fx:id="jogada" layoutX="1033.0" layoutY="547.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" text="Acabar a Jogada" />
       <Label fx:id="labelVez" layoutX="417.0" layoutY="24.0" text="Espera pela tua vez!!">
          <font>
             <Font name="Segoe UI Black" size="32.0" />
          </font>
       </Label>
+      <TextArea fx:id="pecaid" layoutX="1033.0" layoutY="439.0" prefHeight="27.0" prefWidth="200.0" promptText="Nº Peça" />
+      <TextArea fx:id="posicaoid" layoutX="1033.0" layoutY="473.0" prefHeight="27.0" prefWidth="200.0" promptText="Posição tabuleiro" />
+      <Button fx:id="jogar" layoutX="1034.0" layoutY="512.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="200.0" text="Jogar" />
     </children>
 </AnchorPane>
